--- a/src/index.scss
+++ b/src/index.scss
@@ -65,8 +65,8 @@ body {
   display: flex;
   place-items: center;
   min-width: 320px;
-  min-height: 100vh;
-  overflow-y: hidden;
+  height: 100vh;
+  overflow: hidden;
 }
 
 h1 {
